# AdaBoost

./: .gitattributes  .gitignore  .~lock.HAAR1.txt#  AdaBoost.cpp  AdaBoost.h  AdaBoost.sln  AdaBoost1.cpp  AdaBoost1.h  CMakeLists.txt  HaarFunctions.cpp  IntImg.cpp  IntImg.h  IntegralImage.cpp  Main_Viola-Jones.cpp  SameScale.cpp  SameScale.h  Viola-Jones.h  a.out  alfa.txt  betta.cpp  betta.h  buildEclipse.sh  buildMSVC.bat  buildMake.sh  haar.cpp  main.cpp  minE.cpp  minE.h  numberHaar.txt  readFileNamesInDir.cpp  readFileNamesInDir.h  res.txt  results.txt  resultsofmuchmorepics.ods  simpleHaar.cpp  simpleHaar.h  testHaar.txt  workProt.cpp  правки
AdaBoost/: AdaBoost.cpp  AdaBoost.vcxproj  AdaBoost.vcxproj.filters
AdaBoost/Debug/: vc140.idb
AdaBoost/Debug/AdaBoost.tlog/: AdaBoost.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: AdaBoost.ilk
